--- a/template/package.json
+++ b/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aragon/templates-externally-owned-presale-bonding-curve",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "author": "Aragon Assocation <legal@aragon.org>",
   "contributors": [
     "ßingen <bingen@aragon.one>"
@@ -39,6 +39,7 @@
     "/arapp.json",
     "/build",
     "/contracts",
+    "/lib",
     "/scripts",
     "/test"
   ],
