--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aragon/court-presale",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "author": "Aragon Association",
   "contributors": [
     "ßingen <bingen@aragon.one>"
@@ -19,8 +19,7 @@
     "apm:prepublish": "npm run compile",
     "apm:publish:rpc:major": "aragon apm publish major --environment default --skip-confirmation true --propagate-content false",
     "apm:publish:staging:major": "aragon apm publish major --environment staging --use-frame",
-    "apm:publish:rinkeby:major": "aragon apm publish major --environment rinkeby --use-frame",
-    "publish": "npm run apm:publish:rpc:major"
+    "apm:publish:rinkeby:major": "aragon apm publish major --environment rinkeby --use-frame"
   },
   "files": [
     "/abi",
