--- a/app/arapp.json
+++ b/app/arapp.json
@@ -19,7 +19,8 @@
     "mainnet": {
       "registry": "0x314159265dd8dbb310642f98f50c066173c1259b",
       "appName": "balance-redirect-presale.aragonpm.eth",
-      "network": "rinkeby"
+      "network": "mainnet",
+      "wsRPC": "wss://mainnet.eth.aragon.network/ws"
     }
   },
   "roles": [
