Add truffle flattener

--- a/template/package.json
+++ b/template/package.json
@@ -72,6 +72,7 @@
     "solium": "^1.2.3",
     "truffle": "4.1.14",
     "truffle-extract": "^1.2.1",
+    "truffle-flattener": "^1.4.2",
     "web3-eth-abi": "1.2.4"
   }
 }
